RESOLVED FIXED117676
Concurrent JIT shouldn't try to recompute the CodeBlockHash as part of debug dumps, since doing so may fail if dealing with a CachedScript that doesn't have its script string handy
https://bugs.webkit.org/show_bug.cgi?id=117676
Summary Concurrent JIT shouldn't try to recompute the CodeBlockHash as part of debug ...
Filip Pizlo
Reported 2013-06-15 17:06:39 PDT
Concurrent JIT shouldn't try to recompute the CodeBlockHash as part of debug dumps, since doing so may fail if dealing with a CachedScript that doesn't have its script string handy
Attachments
Patch (6.56 KB, patch)
2013-06-15 17:08 PDT, Filip Pizlo
sam: review+
Filip Pizlo
Comment 1 2013-06-15 17:08:15 PDT
Sam Weinig
Comment 2 2013-06-15 18:43:09 PDT
Comment on attachment 204776 [details] Patch View in context: https://bugs.webkit.org/attachment.cgi?id=204776&action=review > Source/JavaScriptCore/bytecode/CodeBlock.cpp:1554 > +#if ENABLE(JIT) > + , m_capabilityLevelState(DFG::CapabilityLevelNotSet) > +#endif Is this related? If not, you should call it out in your changelog or commit it separately.
Filip Pizlo
Comment 3 2013-06-15 18:46:31 PDT
(In reply to comment #2) > (From update of attachment 204776 [details]) > View in context: https://bugs.webkit.org/attachment.cgi?id=204776&action=review > > > Source/JavaScriptCore/bytecode/CodeBlock.cpp:1554 > > +#if ENABLE(JIT) > > + , m_capabilityLevelState(DFG::CapabilityLevelNotSet) > > +#endif > > Is this related? If not, you should call it out in your changelog or commit it separately. No - while messing around with the constructor I realized that this field wasn't being initialized in all constructors.
Filip Pizlo
Comment 4 2013-06-15 18:49:54 PDT
Note You need to log in before you can comment on or make changes to this bug.