Source/JavaScriptCore/dfg/DFGDriver.cpp
@@ -70,6 +70,21 @@ static CompilationResult compile(CompileMode compileMode, ExecState* exec, CodeB
     if (!Options::bytecodeRangeToDFGCompile().isInRange(codeBlock->instructionCount()))
         return CompilationFailed;
 
+    
+    // If the concurrent thread will want the code block's hash, then compute it here
+    // synchronously.
+    if (Options::showDisassembly()
+        || Options::showDFGDisassembly()
+        || Options::dumpBytecodeAtDFGTime()
+        || Options::verboseCompilation()
+        || Options::logCompilationChanges()
+        || Options::validateGraph()
+        || Options::validateGraphAtEachPhase()
+        || Options::verboseOSR()
+        || Options::verboseCompilationQueue()
+        || Options::reportCompileTimes())
+        codeBlock->hash();
+    
     if (logCompilationChanges())
         dataLog("DFG(Driver) compiling ", *codeBlock, ", number of instructions = ", codeBlock->instructionCount(), "\n");
     
