Source/WebCore/loader/cache/CachedScript.cpp
@@ -70,11 +70,6 @@ String CachedScript::mimeType() const
 
 const String& CachedScript::script()
 {
-    if (isCompilationThread()) {
-        RELEASE_ASSERT(m_script);
-        return m_script;
-    }
-    
     ASSERT(!isPurgeable());
 
     if (!m_script && m_data) {
